# ase-storage

./: CMakeLists.txt  README.md  VERSION  codegen.json  module.toml
include/ase/storage/: storage.hpp  storage_module.hpp  storage_resource_manager.hpp  types.hpp  version.hpp.in
include/ase/storage/components/request/: storage_req_kycd_comp.hpp  storage_req_kycd_cwrd_comp.hpp  storage_req_kycd_relm_comp.hpp
include/ase/storage/components/state/: storage_acss_cwrd_comp.hpp  storage_acss_rule_comp.hpp  storage_bllt_vote_comp.hpp  storage_buf_audt_comp.hpp  storage_buf_kycd_acc_comp.hpp  storage_buf_kycd_comp.hpp  storage_buf_kycd_cwrd_comp.hpp  storage_kycd_cwrd_comp.hpp  storage_lat_lnk_comp.hpp  storage_req_acss_comp.hpp  storage_req_cur_comp.hpp  storage_sta_cur_cur_comp.hpp  storage_sta_idn_comp.hpp  storage_sta_kycd_comp.hpp  storage_sta_relm_comp.hpp  storage_sta_task_comp.hpp  storage_sta_tkn_comp.hpp  storage_sta_vote_comp.hpp  storage_vote_cnt_comp.hpp
include/ase/storage/components/tag/: storage_tag_acss_deny.hpp  storage_tag_acss_grant.hpp  storage_tag_audt_pend.hpp  storage_tag_cur_approved.hpp  storage_tag_cur_done.hpp  storage_tag_cur_rejected.hpp  storage_tag_cur_req.hpp  storage_tag_cur_rework.hpp  storage_tag_cur_unrated.hpp  storage_tag_kycd_exp.hpp  storage_tag_kycd_pend.hpp  storage_tag_kycd_pst_done.hpp  storage_tag_kycd_pst_pend.hpp  storage_tag_kycd_rev.hpp  storage_tag_kycd_rev_pst.hpp  storage_tag_kycd_rjct.hpp  storage_tag_kycd_snt.hpp  storage_tag_kycd_vld.hpp  storage_tag_mgr.hpp  storage_tag_relm_active.hpp  storage_tag_relm_archived.hpp  storage_tag_relm_conceal.hpp  storage_tag_relm_org.hpp  storage_tag_relm_personal.hpp  storage_tag_relm_public.hpp  storage_tag_relm_suspended.hpp  storage_tag_vot_pend.hpp
include/ase/storage/systems/acl/: storage_acss_chk_sys.hpp  storage_cncm_flt_sys.hpp
include/ase/storage/systems/audit/: storage_audt_writ_sys.hpp  storage_edge_audt_drn_sys.hpp  storage_srvl_log_sys.hpp
include/ase/storage/systems/curator/: storage_cur_prc_sys.hpp
include/ase/storage/systems/edge/: storage_edge_ini_sys.hpp
include/ase/storage/systems/fs/: storage_file_writ_sys.hpp
include/ase/storage/systems/keycard/: storage_edge_kycd_res_drn_sys.hpp  storage_ini_sys.hpp  storage_kycd_cwrd_pub_sys.hpp  storage_kycd_drn_sys.hpp  storage_kycd_exp_sys.hpp  storage_kycd_lnk_sys.hpp  storage_kycd_ntfy_drn_sys.hpp  storage_kycd_req_drn_sys.hpp  storage_kycd_rev_sys.hpp  storage_kycd_vld_sys.hpp
include/ase/storage/systems/lattice/: storage_latc_sync_sys.hpp
include/ase/storage/systems/quota/: storage_quot_chk_sys.hpp
include/ase/storage/systems/sync/: storage_kycd_sync_snd_sys.hpp
include/ase/storage/systems/vote/: storage_vote_prc_sys.hpp
include/ase/storage/systems/workflow/: storage_wflw_tran_sys.hpp
src/: module_export.cpp  storage_resource_manager.cpp
src/acl/: storage_acss_chk_sys.cpp  storage_cncm_flt_sys.cpp
src/audit/: storage_audt_writ_sys.cpp  storage_edge_audt_drn_sys.cpp  storage_srvl_log_sys.cpp
src/curator/: storage_cur_prc_sys.cpp
src/edge/: storage_edge_ini_sys.cpp
src/fs/: storage_file_writ_sys.cpp
src/keycard/: storage_edge_kycd_res_drn_sys.cpp  storage_ini_sys.cpp  storage_kycd_cwrd_pub_sys.cpp  storage_kycd_drn_sys.cpp  storage_kycd_exp_sys.cpp  storage_kycd_lnk_sys.cpp  storage_kycd_ntfy_drn_sys.cpp  storage_kycd_req_drn_sys.cpp  storage_kycd_rev_sys.cpp  storage_kycd_vld_sys.cpp
src/lattice/: storage_latc_sync_sys.cpp
src/quota/: storage_quot_chk_sys.cpp
src/sync/: storage_kycd_sync_snd_sys.cpp
src/vote/: storage_vote_prc_sys.cpp
src/workflow/: storage_wflw_tran_sys.cpp
tests/: CMakeLists.txt
